# wavelet

./: .gitignore  Cargo.toml  README.md  package.json
.wavelet-cache/fal-veo3-fast/: a2c7db1e98d61dd6.manifest.json
cli/: package.json
cli/src/: args.mjs  audioRender.mjs  devServer.mjs  dom.mjs  htmlDoc.mjs  index.mjs
cli/src/commands/: concat.mjs  cut.mjs  help.mjs  init.mjs  inspect.mjs  lint.mjs  move.mjs  preview.mjs  render-v2.mjs  render.mjs  split.mjs  transcribe.mjs  trim.mjs  verify.mjs
cli/templates/default/: README.md  gamut.html  styles.css
crates/fountain/: Cargo.toml
crates/fountain/src/: ast.rs  characters.rs  lib.rs  parser.rs
crates/fountain/tests/: corpus.rs
crates/fountain/tests/fixtures/: big_fish_excerpt.fountain
data/: safe_zones.json
docs/: RENDER_LINT_SYSTEM.md  character-consistency-and-structured-planning.md  veo-text-prompting.md
evals/: EVAL_PLAYBOOK.md  EVAL_WORKFLOW.md  README.md  judge.md  runner.sh  verdict-template.md
evals/briefs/: 001-mini-coffee.md  002-tree-runner.md  003-freeform-palette.md  004-liquid-death.md
evals/prompts/: 005-whirlpool-stand-mixer.txt  006-modern-gents.txt  007-livconscious.txt  008-new-balance-acrylic.txt  009-new-balance-office-ugc.txt  010-ugc-character-to-camera.txt
evals/specs/: 002-tree-runner.eval.md  003-freeform-palette.eval.md  004-liquid-death.eval.md  005-whirlpool-stand-mixer.eval.md  006-modern-gents.eval.md  007-livconscious.eval.md  008-new-balance-acrylic.eval.md  009-new-balance-office-ugc.eval.md  010-ugc-character-to-camera.eval.md
examples/: .gitignore  dump_onsets.rs  inspect_fx.rs  transition_demo.rs
examples/arizona/: comp.json
examples/beat-demo/: comp-transition.json  comp.json
examples/clip-ref-arizona/: README.md  index.html
examples/vsmoke/: comp.json
fx/: .gitignore  Cargo.toml  FX.md  README.md  RECIPES.md
fx/examples/: animato_demo.rs  blur_emit_check.rs
fx/src/: ast.rs  builder.rs  diagnostics.rs  emit.rs  ir.rs  lib.rs  parse.rs  value.rs
fx/src/stdlib/: blur.rs  combinators.rs  mod.rs  prelude.wgsl  sdf.rs  sdf.wgsl  sources.rs  transforms.rs
fx/tests/: naga_validation.rs  parser.rs  sdf.rs  smoke.rs  wgsl_snapshots.rs
hyperframes/: README.md  package.json  tsconfig.json
hyperframes/docs/: SKILL.md
hyperframes/src/: canvas.ts  index.ts  ready.ts
pipeline_defs/: commercial.yaml  example.yaml
runtime/: package.json  tsconfig.json
runtime/demo/: index.html  vite.config.ts
runtime/src/: adjustmentMount.ts  audioMixer.ts  clipMount.ts  events.ts  includeMount.ts  index.ts  lint.ts  parser.ts  playhead.ts  runtime.ts  sceneMount.ts  shaderMount.ts  style.ts  time.ts  timeline.ts  types.ts
runtime/test/: parser.test.ts  playhead.test.ts
src/: aspect.rs  inline_video.rs  lib.rs  prompts.rs  render.rs  variants.rs  verify.rs
src/agent/: batch.rs  chat.rs  events.rs  mod.rs  orchestrator.rs  prompt_builder.rs  protocol.rs  server.rs  session.rs
src/audio/: cue.rs  decoder.rs  errors.rs  mixer.rs  mod.rs  resample.rs
src/backends/: cache.rs  clipref_emit.rs  http_client.rs  mod.rs  music.rs  pexels.rs  pond5.rs  stock.rs  tts.rs  udio.rs  util.rs  video.rs
src/c2pa/: manifest.rs  mod.rs  signer.rs
src/cli_args/: agent_op.rs  brief_op.rs  c2pa_op.rs  captions_op.rs  character_op.rs  clip_op.rs  cmd.rs  continuity_op.rs  dialogue_op.rs  director_op.rs  image_op.rs  lint_op.rs  mod.rs  music_op.rs  pipelines_op.rs  plan_mode_arg.rs  screenplay_op.rs  shader_op.rs  shot_op.rs  storyboard_op.rs  transitions_op.rs  velocity_op.rs  workflow_op.rs
src/clip/: mod.rs  trim_static.rs
src/clipref/: character.rs  mod.rs  path.rs  screenplay.rs  types.rs  walk.rs
src/compose/: duration.rs  mod.rs  parse.rs  resolve.rs  scene_audio.rs
src/config/: cascade.rs  defaults.rs  mod.rs
src/css_filter/: apply.rs  hijack.rs  mod.rs  parse.rs  types.rs
src/depth/: depth_anything.rs  mod.rs  model.rs
src/director/: backend.rs  brief.rs  creative_director.rs  grader.rs  mod.rs  prompts.rs
src/edit/: execute.rs  gemini.rs  intent.rs  loop_.rs  mod.rs  plan.rs  report.rs  review.rs
src/grammar/: continuity.rs  mod.rs  transitions.rs
src/handlers/: agent_dispatch.rs  image_bg_remove.rs  image_composite.rs  image_contrast.rs  image_depth_map.rs  image_dispatch.rs  image_identity_check.rs  image_isolate.rs  image_ocr.rs  image_scrim.rs  image_verify_shot.rs  lint.rs  mod.rs  query_dispatch.rs  query_shader.rs  shot_dispatch.rs  shot_edit.rs  shot_fix.rs  shot_fix_from_verify.rs  shot_insert_into_scene.rs  shot_search.rs  shot_still.rs  shot_still_variants.rs  shot_txt2vid.rs  shot_upscale.rs  storyboard_dispatch.rs  util.rs
src/image_analysis/: concat.rs  contrast.rs  face_refine.rs  mod.rs  negative_space.rs  ocr.rs  saliency.rs  scrim.rs
src/lint/: audio_presence.rs  baked_text_ocr.rs  color_grade.rs  glyph_clip.rs  glyph_clip_tests.rs  hallucinated_attrs.rs  layout_axis.rs  mod.rs  mp4_frames.rs  report.rs  safe_zone.rs  safe_zones.rs  static_frame_trim.rs  text_on_subject.rs  text_readability.rs  text_readability_contrast.rs
src/ocr/: mod.rs  models.rs  run.rs
src/pipelines/: loader.rs  mod.rs  registry.rs  schema.rs  workflow.rs
src/query/: beat.rs  diff.rs  glyph_run.rs  mod.rs  ocr.rs  pixels.rs  repl.rs  scene_graph.rs  snapshot.rs
src/render_offline/: audio_mux.rs  mod.rs  render.rs  scene.rs  stats.rs  types.rs  utils.rs
src/screenplay/: duration_fit.rs  mod.rs
src/shader/: blur.rs  filter_pass.rs  gpu_blur.rs  mod.rs  transition.rs
src/storyboard/: attributes.rs  mod.rs  plan.rs  verify.rs
src/velocity/: edl.rs  mod.rs  propose.rs  render_curve.rs  validate.rs
src/video/: codec.rs  encoder.rs  errors.rs  frame.rs  mod.rs
tests/: backdrop_filter_smoke.rs  background_clip_text_smoke.rs  character_cli_smoke.rs  clip_path_shapes_smoke.rs  clipref_e2e_smoke.rs  frame_budget_smoke.rs  fx_progress_smoke.rs  inline_video_smoke.rs  l_storyboard.rs  text_shadow_blur_smoke.rs  validators_tier1_smoke.rs
tests/fixtures/: l-storyboard-example.json  tier1_broken.json  tier1_comp.json  tier1_scene.html
(+654 files in other folders)
