[package]
name = "fountain"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
description = "Fountain (fountain.io) screenplay parser. Plain-text industry-standard screenplay format → structured AST for gamut's screenplay-to-MP4 pipeline."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
